# openclaw-quant-analyst

./: .gitignore  .npmignore  MANIFEST.in  PRE_PUBLISH_CHECKLIST.md  PUBLISHING.md  QUICKSTART.md  README.md  READY_TO_PUBLISH.md  package.json  pyproject.toml  requirements.txt  setup.py
examples/: README.md  backtest_ma_cross.py  custom_strategy.py  optimize_rsi.py
scripts/: publish-all.sh  publish-npm.sh  publish-pypi.sh
src/: types.ts
src/openclaw_quant/: __init__.py  backtest.py  cli.py  data.py  indicators.py  metrics.py  strategy.py  types.py
src/utils/: indicators.ts  metrics.ts
